# taipan-responsive

./: .gitignore  .pre-commit-config.yaml  README.md  build_amazon_linux.sh  pyproject.toml  pyrightconfig.json
src/legacy/: taipan.c
src/taipan/: __init__.py  __main__.py  app.py
src/taipan/models/: __init__.py  commodity.py  game_engine.py  game_state.py  player.py  port.py  ship.py
src/taipan/ui/: __init__.py  app.py  port.py  screens.py  splash.py  trade.py  travel.py  widgets.py
